--- a/app_report.html
+++ b/app_report.html
@@ -10,7 +10,7 @@
 
 <meta name="author" content="数据部" />
 
-<meta name="date" content="2016-01-26" />
+<meta name="date" content="2016-03-03" />
 
 <title>粉丝网app数据报告</title>
 
@@ -66,82 +66,113 @@ img {
 <div id="header">
 <h1 class="title">粉丝网app数据报告</h1>
 <h4 class="author"><em>数据部</em></h4>
-<h4 class="date"><em>2016-01-26</em></h4>
+<h4 class="date"><em>2016-03-03</em></h4>
 </div>
 
 
 <div id="app" class="section level1">
 <h1><font size=4.5>1.app积累用户的各平台人数与占比</font></h1>
-<p><font size=2.5>至昨日总累计用户 ：<font color="red">50300</font>人<br> <img src="app_report_files/figure-html/unnamed-chunk-2-1.png" title="" alt="" width="672" /> <br></p>
+<p><font size=2.5>至昨日总累计用户 ：<font color="red">70823</font>人<br> <img src="app_report_files/figure-html/unnamed-chunk-2-1.png" title="" alt="" width="672" /> <br></p>
 </div>
 <div id="7ios" class="section level1">
 <h1><font size=4.5>2.近7日iOS平台中国娱乐分类内下载排名(无排名则不上榜、无数据)</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-3-1.png" title="" alt="" width="672" /> <br></p>
-<p><font size=4.5>近7日iOS平台中国娱乐分类内畅销排名(无排名则不上榜、无数据)</font><br> <img src="app_report_files/figure-html/unnamed-chunk-4-1.png" title="" alt="" width="672" /></p>
+<p><font size=4.5>近7日iOS平台中国娱乐分类内畅销排名(无排名则不上榜、无数据)</font><br> <img src="app_report_files/figure-html/unnamed-chunk-4-1.png" title="" alt="" width="672" /> <br><font size=3.5>畅销排在粉丝网APP前面的列表（或前30名）：</font><br></p>
+<pre><code>##    排名               名称
+## 1     1             爱奇艺
+## 2     2           腾讯视频
+## 3     3           优酷视频
+## 4     4      爱奇艺PPS影音
+## 5     5            全民K歌
+## 6     6               迅雷
+## 7     7           乐视视频
+## 8     8               唱吧
+## 9     9           虎牙直播
+## 10   10           土豆视频
+## 11   11             斗鱼TV
+## 12   12           搜狐视频
+## 13   13           繁星直播
+## 14   14           芒果直播
+## 15   15             芒果TV
+## 16   16             KK唱响
+## 17   17         唱吧直播间
+## 18   18         来疯直播秀
+## 19   19               秀场
+## 20   20           PPTV聚力
+## 21   21             战旗TV
+## 22   22       齐齐互动视频
+## 23   23           腾讯动漫
+## 24   24 茶苑三公（银子版）
+## 25   25             KK直播
+## 26   26           暴风影音
+## 27   27               千帆
+## 28   28       亲朋爽翻扯旋
+## 29   29            ACG Art
+## 30   30         17直播秀场</code></pre>
 </div>
-<div id="5662" class="section level1">
-<h1><font size=4.5>3.最近一周内积累（总新增）用户：<font color="red">5662</font>人<br></h1>
-<p><font size=4.5>最近一个月内积累（总新增）用户：<font color="red">16954</font>人<br> <font size=4.5>最近一周环比增长：<font color="red">112.94</font>%<br> <font size=4.5>最近一周同比增长(相对于一个月前)：<font color="red">-16.37</font>%<br></p>
-<p><img src="app_report_files/figure-html/unnamed-chunk-5-1.png" title="" alt="" width="672" /></p>
+<div id="5796" class="section level1">
+<h1><font size=4.5>3.最近一周内积累（总新增）用户：<font color="red">5796</font>人<br></h1>
+<p><font size=4.5>最近一个月内积累（总新增）用户：<font color="red">11650</font>人<br> <font size=4.5>最近一周环比增长：<font color="red">243.36</font>%<br> <font size=4.5>最近一周同比增长(相对于一个月前)：<font color="red">-34.68</font>%<br></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-6-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="andriodios" class="section level1">
 <h1><font size=4.5>4.最近七日新增用户（Andriod与iOS平台）</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-6-1.png" title="" alt="" width="672" /> <br></p>
-</div>
-<div class="section level1">
-<h1><font size=4.5>5.最近七日活跃用户</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-7-1.png" title="" alt="" width="672" /> <br></p>
 </div>
 <div class="section level1">
-<h1><font size=4.5>6.活跃用户构成</font><br></h1>
+<h1><font size=4.5>5.最近七日活跃用户</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-8-1.png" title="" alt="" width="672" /> <br></p>
 </div>
 <div class="section level1">
-<h1><font size=4.5>7.活跃用户比例(活跃用户/总累计用户)</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-9-1.png" title="" alt="" width="672" /></p>
+<h1><font size=4.5>6.活跃用户构成</font><br></h1>
+<p><img src="app_report_files/figure-html/unnamed-chunk-9-1.png" title="" alt="" width="672" /> <br></p>
 </div>
-<div id="-andriod" class="section level1">
-<h1><font size=4.5>8.渠道活跃用户-Andriod</font><br></h1>
+<div class="section level1">
+<h1><font size=4.5>7.活跃用户比例(活跃用户/总累计用户)</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-10-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="-andriod" class="section level1">
-<h1><font size=4.5>9.渠道累计用户和活跃率-Andriod平台</font><br></h1>
+<h1><font size=4.5>8.渠道活跃用户-Andriod</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-11-1.png" title="" alt="" width="672" /></p>
 </div>
-<div class="section level1">
-<h1><font size=4.5>10.启动次数分布（按每小时分布）</font><br></h1>
+<div id="-andriod" class="section level1">
+<h1><font size=4.5>9.渠道累计用户和活跃率-Andriod平台</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-12-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
-<h1><font size=4.5>11.访问时长（按时间时长）</font><br></h1>
+<h1><font size=4.5>10.启动次数分布（按每小时分布）</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-13-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
-<h1><font size=4.5>12.日启动次数分布</font><br></h1>
+<h1><font size=4.5>11.访问时长（按时间时长）</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-14-1.png" title="" alt="" width="672" /></p>
+</div>
+<div class="section level1">
+<h1><font size=4.5>12.日启动次数分布</font><br></h1>
+<p><img src="app_report_files/figure-html/unnamed-chunk-15-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="ios-15" class="section level1">
 <h1><font size=4.5>13.iOS-15天活跃用户成分</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-15-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-16-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="andriod-15" class="section level1">
 <h1><font size=4.5>14.Andriod-15天活跃用户成分</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-16-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-17-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
 <h1><font size=4.5>15.次日留存</font><br></h1>
 </div>
 <div id="714" class="section level1">
 <h1><font size=4>解释：条形图中的数字是当日新增用户，上面的百分比为到第二天留存的比例，7日留存和14日留存类似</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-17-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-18-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
 <h1><font size=4.5>16.7日后留存</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-18-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-19-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="-1" class="section level1">
 <h1><font size=4.5>17.14日后留存</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-19-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-20-1.png" title="" alt="" width="672" /></p>
 </div>
 
 
