--- a/app_report.html
+++ b/app_report.html
@@ -10,7 +10,7 @@
 
 <meta name="author" content="数据部" />
 
-<meta name="date" content="2016-03-17" />
+<meta name="date" content="2016-03-18" />
 
 <title>粉丝网app数据报告</title>
 
@@ -66,11 +66,11 @@ img {
 <div id="header">
 <h1 class="title">粉丝网app数据报告</h1>
 <h4 class="author"><em>数据部</em></h4>
-<h4 class="date"><em>2016-03-17</em></h4>
+<h4 class="date"><em>2016-03-18</em></h4>
 </div>
 
 
-<p>基本情况<br> 1.至昨日总累计用户 ：83576人。<br> 2.昨日新增用户 425人、日活跃用户 1947。<br> 3.IOS中国娱乐榜畅销排名为197 名、下载排名为439名。<br></p>
+<p>基本情况<br> 1.至昨日总累计用户 ：85525人。<br> 2.昨日新增用户 471人、日活跃用户 2347人。<br> 3.IOS中国娱乐榜畅销排名为50 名、下载排名为437名。<br></p>
 <div id="7ios" class="section level1">
 <h1><font size=4.5>1.近7日iOS平台中国娱乐分类内下载排名(无排名则不上榜、无数据)</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-2-1.png" title="" alt="" width="672" /> <br></p>
@@ -86,7 +86,7 @@ img {
 <div class="section level1">
 <h1><font size=4.5>4.最近七日活跃用户</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-5-1.png" title="" alt="" width="672" /> <br> #<font size=4.5>1.app积累用户的各平台人数与占比</font></p>
-<p><font size=2.5>至昨日总累计用户 ：<font color="red">83576</font>人<br> <img src="app_report_files/figure-html/unnamed-chunk-6-1.png" title="" alt="" width="672" /> <br></p>
+<p><font size=2.5>至昨日总累计用户 ：<font color="red">85525</font>人<br> <img src="app_report_files/figure-html/unnamed-chunk-6-1.png" title="" alt="" width="672" /> <br></p>
 </div>
 <div id="7ios-1" class="section level1">
 <h1>2<font size=4.5>近7日iOS平台中国娱乐分类内畅销排名(无排名则不上榜、无数据)</font><br></h1>
@@ -100,32 +100,32 @@ img {
 ## 6     6               迅雷
 ## 7     7               唱吧
 ## 8     8           乐视视频
-## 9     9           繁星直播
-## 10   10             斗鱼TV
-## 11   11           芒果直播
-## 12   12           虎牙直播
+## 9     9           芒果直播
+## 10   10         来疯直播秀
+## 11   11           繁星直播
+## 12   12             斗鱼TV
 ## 13   13           土豆视频
-## 14   14           搜狐视频
-## 15   15           多玩饭盒
-## 16   16             战旗TV
-## 17   17         来疯直播秀
-## 18   18             芒果TV
-## 19   19               秀场
-## 20   20       齐齐互动视频
-## 21   21             KK唱响
-## 22   22         唱吧直播间
-## 23   23           PPTV聚力
-## 24   24           么么直播
-## 25   25             触手TV
-## 26   26           腾讯动漫
-## 27   27               千帆
-## 28   28 茶苑三公（银子版）
-## 29   29           暴风影音
-## 30   30           AVPlayer</code></pre>
+## 14   14               秀场
+## 15   15           搜狐视频
+## 16   16           虎牙直播
+## 17   17             芒果TV
+## 18   18             战旗TV
+## 19   19         唱吧直播间
+## 20   20             KK唱响
+## 21   21           网易BoBo
+## 22   22           PPTV聚力
+## 23   23           么么直播
+## 24   24             触手TV
+## 25   25 茶苑三公（银子版）
+## 26   26           暴风影音
+## 27   27           腾讯动漫
+## 28   28           多玩饭盒
+## 29   29       齐齐互动视频
+## 30   30             ME直播</code></pre>
 </div>
-<div id="5015" class="section level1">
-<h1><font size=4.5>3.最近一周内积累（总新增）用户：<font color="red">5015</font>人<br></h1>
-<p><font size=4.5>最近一个月内积累（总新增）用户：<font color="red">20761</font>人<br> <font size=4.5>最近一周环比增长：<font color="red">-35.19</font>%<br> <font size=4.5>最近一周同比增长(相对于一个月前)：<font color="red">266.06</font>%<br></p>
+<div id="3796" class="section level1">
+<h1><font size=4.5>3.最近一周内积累（总新增）用户：<font color="red">3796</font>人<br></h1>
+<p><font size=4.5>最近一个月内积累（总新增）用户：<font color="red">21929</font>人<br> <font size=4.5>最近一周环比增长：<font color="red">-55.18</font>%<br> <font size=4.5>最近一周同比增长(相对于一个月前)：<font color="red">151.22</font>%<br></p>
 <p><img src="app_report_files/figure-html/unnamed-chunk-9-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="andriodios-1" class="section level1">
@@ -140,29 +140,25 @@ img {
 <h1><font size=4.5>6.活跃用户构成</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-12-1.png" title="" alt="" width="672" /> <br></p>
 </div>
-<div class="section level1">
-<h1><font size=4.5>7.活跃用户比例(活跃用户/总累计用户)</font><br></h1>
+<div id="-andriod" class="section level1">
+<h1><font size=4.5>8.渠道活跃用户-Andriod</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-13-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="-andriod" class="section level1">
-<h1><font size=4.5>8.渠道活跃用户-Andriod</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-14-1.png" title="" alt="" width="672" /></p>
-</div>
-<div id="-andriod" class="section level1">
 <h1><font size=4.5>9.渠道累计用户和活跃率-Andriod平台</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-15-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-14-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
 <h1><font size=4.5>10.启动次数分布（按每小时分布）</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-16-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-15-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
 <h1><font size=4.5>11.访问时长（按时间时长）</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-17-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-16-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
 <h1><font size=4.5>12.日启动次数分布</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-18-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-17-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="ios-15" class="section level1">
 <h1><font size=4.5>13.iOS-15天活跃用户成分</font><br></h1>
@@ -175,15 +171,15 @@ img {
 </div>
 <div id="714" class="section level1">
 <h1><font size=4>解释：条形图中的数字是当日新增用户，上面的百分比为到第二天留存的比例，7日留存和14日留存类似</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-21-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-20-1.png" title="" alt="" width="672" /></p>
 </div>
 <div class="section level1">
 <h1><font size=4.5>16.7日后留存</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-22-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-21-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="-1" class="section level1">
 <h1><font size=4.5>17.14日后留存</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-23-1.png" title="" alt="" width="672" /></p>
+<p><img src="app_report_files/figure-html/unnamed-chunk-22-1.png" title="" alt="" width="672" /></p>
 </div>
 
 
