--- a/app_report.html
+++ b/app_report.html
@@ -10,7 +10,7 @@
 
 <meta name="author" content="数据部" />
 
-<meta name="date" content="2016-03-18" />
+<meta name="date" content="2016-03-28" />
 
 <title>粉丝网app数据报告</title>
 
@@ -66,11 +66,15 @@ img {
 <div id="header">
 <h1 class="title">粉丝网app数据报告</h1>
 <h4 class="author"><em>数据部</em></h4>
-<h4 class="date"><em>2016-03-18</em></h4>
+<h4 class="date"><em>2016-03-28</em></h4>
 </div>
 
 
-<p>基本情况<br> 1.至昨日总累计用户 ：85525人。<br> 2.昨日新增用户 471人、日活跃用户 2347人。<br> 3.IOS中国娱乐榜畅销排名为50 名、下载排名为437名。<br></p>
+<p><font size=3><B>基本情况</B><br></font> 1.至昨日总累计用户 ：89956人。<br> 2.昨日新增用户 712人、日活跃用户 2334人。<br> 3.IOS中国娱乐榜畅销排名为40 名、下载排名为384名。<br></p>
+<p>分析：<br></p>
+<p><font size=3><B>昨日app直播浏览前三名：</B></font><br></p>
+<p><font size=3><B>app各大板块的浏览点击信息：</B></font><br></p>
+<p><font size=2><B>详细情况请看附件EXCEL表格</B><br></font></p>
 <div id="7ios" class="section level1">
 <h1><font size=4.5>1.近7日iOS平台中国娱乐分类内下载排名(无排名则不上榜、无数据)</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-2-1.png" title="" alt="" width="672" /> <br></p>
@@ -86,7 +90,7 @@ img {
 <div class="section level1">
 <h1><font size=4.5>4.最近七日活跃用户</font><br></h1>
 <p><img src="app_report_files/figure-html/unnamed-chunk-5-1.png" title="" alt="" width="672" /> <br> #<font size=4.5>1.app积累用户的各平台人数与占比</font></p>
-<p><font size=2.5>至昨日总累计用户 ：<font color="red">85525</font>人<br> <img src="app_report_files/figure-html/unnamed-chunk-6-1.png" title="" alt="" width="672" /> <br></p>
+<p><font size=2.5>至昨日总累计用户 ：<font color="red">89956</font>人<br> <img src="app_report_files/figure-html/unnamed-chunk-6-1.png" title="" alt="" width="672" /> <br></p>
 </div>
 <div id="7ios-1" class="section level1">
 <h1>2<font size=4.5>近7日iOS平台中国娱乐分类内畅销排名(无排名则不上榜、无数据)</font><br></h1>
@@ -97,35 +101,35 @@ img {
 ## 3     3      爱奇艺PPS影音
 ## 4     4           优酷视频
 ## 5     5            全民K歌
-## 6     6               迅雷
-## 7     7               唱吧
-## 8     8           乐视视频
+## 6     6                 YY
+## 7     7               迅雷
+## 8     8               唱吧
 ## 9     9           芒果直播
-## 10   10         来疯直播秀
+## 10   10           乐视视频
 ## 11   11           繁星直播
 ## 12   12             斗鱼TV
 ## 13   13           土豆视频
-## 14   14               秀场
-## 15   15           搜狐视频
-## 16   16           虎牙直播
-## 17   17             芒果TV
-## 18   18             战旗TV
-## 19   19         唱吧直播间
-## 20   20             KK唱响
-## 21   21           网易BoBo
-## 22   22           PPTV聚力
-## 23   23           么么直播
-## 24   24             触手TV
+## 14   14           虎牙直播
+## 15   15             战旗TV
+## 16   16         来疯直播秀
+## 17   17           搜狐视频
+## 18   18             芒果TV
+## 19   19           龙珠直播
+## 20   20               秀场
+## 21   21             全民TV
+## 22   22       齐齐互动视频
+## 23   23         唱吧直播间
+## 24   24             KK唱响
 ## 25   25 茶苑三公（银子版）
-## 26   26           暴风影音
+## 26   26           乐嗨秀场
 ## 27   27           腾讯动漫
-## 28   28           多玩饭盒
-## 29   29       齐齐互动视频
-## 30   30             ME直播</code></pre>
+## 28   28               千帆
+## 29   29           暴风影音
+## 30   30             KK直播</code></pre>
 </div>
-<div id="3796" class="section level1">
-<h1><font size=4.5>3.最近一周内积累（总新增）用户：<font color="red">3796</font>人<br></h1>
-<p><font size=4.5>最近一个月内积累（总新增）用户：<font color="red">21929</font>人<br> <font size=4.5>最近一周环比增长：<font color="red">-55.18</font>%<br> <font size=4.5>最近一周同比增长(相对于一个月前)：<font color="red">151.22</font>%<br></p>
+<div id="3965" class="section level1">
+<h1><font size=4.5>3.最近一周内积累（总新增）用户：<font color="red">3965</font>人<br></h1>
+<p><font size=4.5>最近一个月内积累（总新增）用户：<font color="red">23268</font>人<br> <font size=4.5>最近一周环比增长：<font color="red">4.01</font>%<br> <font size=4.5>最近一周同比增长(相对于一个月前)：<font color="red">38.59</font>%<br></p>
 <p><img src="app_report_files/figure-html/unnamed-chunk-9-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="andriodios-1" class="section level1">
@@ -158,7 +162,6 @@ img {
 </div>
 <div class="section level1">
 <h1><font size=4.5>12.日启动次数分布</font><br></h1>
-<p><img src="app_report_files/figure-html/unnamed-chunk-17-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="ios-15" class="section level1">
 <h1><font size=4.5>13.iOS-15天活跃用户成分</font><br></h1>
